# contracts

./: .env.example  .gitignore  .gitmodules  .pinned-submodules  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  ISSUES.md  README.md  build.sh  foundry.toml  mine_hook.sh  remappings.txt
script/cli/: .gitignore  Cargo.toml  build.rs  build.sh  justfile
script/cli/src/: constants.rs  debug.rs  errors.rs  main.rs  screen_manager.rs  state_manager.rs  ui.rs
script/cli/src/libs/: explorer.rs  mod.rs  web3.rs
script/cli/src/screens/: chain_id.rs  home.rs  mod.rs  screen_manager.rs
script/cli/src/screens/config/: protocol_selection.rs
script/cli/src/screens/create_config/: mod.rs  protocol_selection.rs
script/cli/src/screens/deploy_contracts/: execute_deploy_script.rs  mod.rs
script/cli/src/screens/register_contract/: enter_address.rs  get_contract_info.rs  mod.rs
script/cli/src/screens/shared/: block_explorer.rs  chain_id.rs  enter_address.rs  enter_explorer_api_key.rs  error_screen.rs  generic_multi_select.rs  generic_select.rs  generic_select_or_enter.rs  mod.rs  oklink_api_url.rs  rpc_url.rs  select_verifier_type.rs  skip_verification.rs  sourcify_api_url.rs  test_connection.rs  text_display_screen.rs
script/cli/src/screens/types/: enter_env_var.rs  mod.rs  select.rs  (+4 more)
script/cli/src/util/: chain_config.rs  deploy_config_lib.rs  deployment_log.rs  mod.rs  parse_chain_config.rs  register_contract.rs  screen_util.rs
script/cli/src/workflows/: default_workflow.rs  error_workflow.rs  mod.rs  verifier_selection_workflow.rs  workflow_manager.rs
(+959 files in other folders)
